<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_background"
    tools:context="com.makuno.memory.ui.entry.view.EntryActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        app:fontFamily="@font/robotic_monkey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent="0.7"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/robot" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStartGame"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:background="@color/sky_blue"
        android:gravity="center"
        android:text="@string/start_game"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="@font/robotic_monkey"
        app:layout_constraintBottom_toTopOf="@+id/btnScores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnScores"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:background="@color/sky_blue"
        android:gravity="center"
        android:text="@string/scores"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="@font/robotic_monkey"

        app:layout_constraintBottom_toTopOf="@+id/textViewMadeWith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewMadeWith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/primary_background"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/made_with"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:fontFamily="@font/robotic_monkey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
