<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:orientation="vertical"
    tools:context=".ui.game.view.GameActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="2dp"
            android:text="Pairs:"
            android:textColor="@android:color/white"
            app:fontFamily="@font/robotic_monkey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewPairs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/empty_value"
            android:textColor="@android:color/white"
            app:fontFamily="@font/robotic_monkey"
            tools:text="0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="2dp"
            android:text="@string/time"
            android:textColor="@android:color/white"
            app:fontFamily="@font/robotic_monkey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewTimeElapsed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:padding="2dp"
            android:text="@string/empty_value"
            android:textColor="@android:color/white"
            app:fontFamily="@font/robotic_monkey"
            tools:text="00:11" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="2dp"
            android:text="@string/moves"
            android:textColor="@android:color/white"
            app:fontFamily="@font/robotic_monkey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewMoves"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/empty_value"
            android:textColor="@android:color/white"
            app:fontFamily="@font/robotic_monkey"
            tools:text="23" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCards"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="4"
        tools:itemCount="20"
        tools:listitem="@layout/item_card" />

</androidx.appcompat.widget.LinearLayoutCompat>