<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/secondary_background"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingTop="12dp"
                android:paddingRight="8dp"
                android:paddingBottom="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dialog_awesome"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    app:fontFamily="@font/robotic_monkey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dialog_awesome_helper"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:fontFamily="@font/robotic_monkey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:gravity="center"
                            android:text="@string/time"
                            android:textColor="@android:color/white"
                            app:fontFamily="@font/robotic_monkey" />

                        <TextView
                            android:id="@+id/textViewTimeElapsed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@android:color/white"
                            android:textSize="26sp"
                            app:fontFamily="@font/robotic_monkey"
                            tools:text="01:40" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:gravity="center"
                            android:text="@string/moves"
                            android:textColor="@android:color/white"
                            app:fontFamily="@font/robotic_monkey" />

                        <TextView
                            android:id="@+id/textViewMoves"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@android:color/white"
                            android:textSize="26sp"
                            app:fontFamily="@font/robotic_monkey"
                            tools:text="120" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="40dp">

                    <Button
                        android:id="@+id/btnRestart"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:text="restart"
                        app:fontFamily="@font/robotic_monkey" />

                    <Button
                        android:id="@+id/btnScores"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:text="scores"
                        app:fontFamily="@font/robotic_monkey" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</FrameLayout>
